fix(ui): banner covers full screen

--- a/static/styles/artist.css
+++ b/static/styles/artist.css
@@ -54,8 +54,9 @@
     position: fixed;
     top: 0;
     left: 0;
-    height: 100%;
-    width: auto;
+    height: 100vh;
+    width: 100vw;
+    object-fit: cover;
 }
 
 .locations {
